vbnc/vbnc/vbnc/tests/Errors/30456-3.vb
Module bug
	Function Main () As Integer
		Global.System.What.Ever = true
	End Function
End Module
